@@ -20,6 +20,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.41  2004/12/09 12:40:08  jimmyo
+# mumin-graph now treats CDEFs in fields with long names properly.
+#
 # Revision 1.40  2004/11/26 13:24:16  jimmyo
 # Added --stdout-option to all programs.
 #
@@ -866,8 +869,12 @@ sub process_node {
 	    my $single_value = $force_single_value || &single_value ($node, $config, $domain, $name, $service, $field, \@field_order);
 	    my $has_negative = exists $node->{client}->{$service}->{$field.".negative"};
 
-	    # Trim the fieldname to make room for other field names. Hack.
+	    # Trim the fieldname to make room for other field names.
 	    $rrdname = &get_field_name ($field);
+	    if ($rrdname ne $field) # A change was made
+	    {
+		set_cdef_name ($node->{client}->{$service}, $field, $rrdname);
+	    }
 
 	    push (@rrd, "DEF:g$rrdname=" .
 		  $filename . ":" . $rrdfield . ":AVERAGE");
